--- a/src/app/views/pages/login/login.component.html
+++ b/src/app/views/pages/login/login.component.html
@@ -16,7 +16,7 @@
                     autoComplete="username" 
                     cFormControl 
                     placeholder="Tên đăng nhập" 
-                    [(ngModel)]="user.userName"
+                    [(ngModel)]="user.username"
                   />
                 </c-input-group>
                 <c-input-group class="mb-4">
