--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -33,16 +33,14 @@
     </button>
     <ul cDropdownMenu class="px-2 py-3 w-auto">
       <li>
-        <a cDropdownItem routerLink="" [cModalToggle]="changepass.id">
+        <a cDropdownItem routerLink="" [cModalToggle]="changepass.id" (click)="isModalVisible = true">
           <svg cIcon class="me-2" name="cilSettings"></svg>
           Đổi Mật Khẩu
         </a>
       </li>
       <li>
         <a cDropdownItem routerLink=""
-          (click)="
-            $event.preventDefault();
-            logout()">
+          (click)="logout()">
           <svg cIcon class="me-2" name="cilAccountLogout"></svg>
           Đăng Xuất
         </a>
@@ -51,24 +49,31 @@
   </c-dropdown>
 </ng-template>
 
-<c-modal #changepass backdrop="static" id="changepass">
+<c-modal #changepass backdrop="static" id="changepass" [visible]="isModalVisible">
   <c-modal-header>
     <h5 cModalTitle class="w-100 text-center">Đổi Mật Khẩu</h5>
   </c-modal-header>
   <c-modal-body>
     <div class="mb-3">
+      <div class="d-block mb-1 font-weigth-500">Mật khẩu hiện tại:</div>
+      <input name="currentPassword" type="password" placeholder="Mật khẩu hiện tại" class="input-el"
+      [(ngModel)]="pwObject.currentPassword">
+    </div>
+    <div class="mb-3">
       <div class="d-block mb-1 font-weigth-500">Mật khẩu mới:</div>
-      <input name="password" type="password" placeholder="Mật khẩu mới" class="input-el">
+      <input name="newPassword" type="password" placeholder="Mật khẩu mới" class="input-el"
+      [(ngModel)]="pwObject.newPassword">
     </div>
     <div>
       <div class="d-block mb-1 font-weigth-500">Xác nhận mật khẩu:</div>
-      <input name="re-password" type="password" placeholder="Xác nhận mật khẩu" class="input-el">
+      <input name="re-password" type="password" placeholder="Xác nhận mật khẩu" class="input-el"
+      [(ngModel)]="pwObject.newPassword_confirmation">
     </div>
   </c-modal-body>
   <c-modal-footer>
     <button [cModalToggle]="changepass.id" cButton color="secondary">
       Hủy
     </button>
-    <button cButton color="primary">Lưu</button>
+    <button cButton color="primary" (click)="submitChangePW()">Lưu</button>
   </c-modal-footer>
 </c-modal>
