Add proxy and integrate api login/game/match

--- a/src/app/layout/default-layout/default-header/default-header.component.html
+++ b/src/app/layout/default-layout/default-header/default-header.component.html
@@ -33,7 +33,7 @@
     </button>
     <ul cDropdownMenu class="px-2 py-3 w-auto">
       <li>
-        <a cDropdownItem routerLink="" [cModalToggle]="changepass.id" (click)="isModalVisible = true">
+        <a cDropdownItem routerLink="" [cModalToggle]="changepass.id" (click)="initChangePW()">
           <svg cIcon class="me-2" name="cilSettings"></svg>
           Đổi Mật Khẩu
         </a>
