--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,4 +1,7 @@
-<div class="d-flex font-weigth-500 mb-5"> Trang Chủ / Danh Sách Game </div>
+<c-breadcrumb class="font-weigth-500 mb-5">
+  <c-breadcrumb-item url="#">Trang Chủ</c-breadcrumb-item>
+  <c-breadcrumb-item [active]="true">Danh Sách Game</c-breadcrumb-item>
+</c-breadcrumb>
 <c-row>
   <c-col sm="6">
     <c-card>
@@ -11,7 +14,7 @@
           <div class="status-text">ĐANG DIỄN RA</div>
         </div>
         <div class="d-flex align-item-center btn-actions">
-          <button class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalCurrentSession('ga')">PHIÊN HIỆN TẠI</button>
+          <button class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalListMatch()">QUẢN LÍ TRẬN ĐẤU</button>
           <button class="brown" [cModalToggle]="result.id" (click)="onShowModalResult('ga')">TRẢ KẾT QUẢ</button>
         </div>
         <div class="d-flex align-item-center btn-actions">
@@ -51,7 +54,13 @@
 </c-row>
 <c-modal #modal backdrop="static" id="modal">
   <c-modal-body>
-    <h5 cModalTitle class="w-100 text-center">{{title}}</h5>
+    <h5 cModalTitle class="w-100 text-center mb-4">{{title}}</h5>
+    <p class="label-txt font-weigth-500">TRẬN ĐẤU:</p>
+    <select class="input-el w-100">
+      <option value="" disabled selected>Chọn trận đấu</option>
+      <option value="1">Trận 1</option>
+      <option value="2">Trận 2</option>
+    </select>
   </c-modal-body>
   <c-modal-footer>
     <button [cModalToggle]="modal.id" cButton color="secondary">
@@ -62,7 +71,7 @@
 </c-modal>
 <c-modal #currentSession backdrop="static" id="currentSession">
   <c-modal-header>
-    <h5 cModalTitle class="w-100 text-center">THÔNG TIN PHIÊN HIỆN TẠI</h5>
+    <h5 cModalTitle class="w-100 text-center">THÔNG TIN CHI TIẾT</h5>
   </c-modal-header>
   <c-modal-body>
     <table bordered cTable>
@@ -97,6 +106,12 @@
     <h5 cModalTitle class="w-100 text-center">KẾT QUẢ</h5>
   </c-modal-header>
   <c-modal-body>
+    <p class="label-txt font-weigth-500">TRẬN ĐẤU:</p>
+    <select class="input-el w-100 mb-3">
+      <option value="" disabled selected>Chọn trận đấu</option>
+      <option value="1">Trận 1</option>
+      <option value="2">Trận 2</option>
+    </select>
     <p class="font-weigth-500">
       CHỌN GÀ CHIẾN THẮNG:
     </p>
@@ -123,6 +138,10 @@
     <h5 cModalTitle class="w-100 text-center">PHIÊN CƯỢC MỚI</h5>
   </c-modal-header>
   <c-modal-body>
+    <div class="mb-3">
+      <div class="d-block mb-1 font-weigth-500">TRẬN ĐẤU:</div>
+      <input name="match" type="text" placeholder="Trận đấu" class="input-el">
+    </div>
     <div class="mb-3">
       <div class="d-block mb-1 font-weigth-500">TÊN GÀ XANH:</div>
       <input name="chicken1" type="text" placeholder="Tên gà xanh" class="input-el">
