--- a/src/app/layout/default-layout/default-layout.component.scss
+++ b/src/app/layout/default-layout/default-layout.component.scss
@@ -32,3 +32,20 @@
 //  --scrollbar-thumb-transition: height ease-out 150ms, width ease-out 150ms;
 //  --scrollbar-track-transition: height ease-out 150ms, width ease-out 150ms;
 //}
+.loading-screen {
+  width: 100%;
+  background: #676767c2;
+  position: absolute;
+  top: -1.5rem;
+  z-index: 2;
+  bottom: 0;
+  .spinner-border {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    translate: -50% -50%;
+    width: 60px;
+    height: 60px;
+    font-size: 20px;
+  }
+}
