--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -3,70 +3,50 @@
   <c-breadcrumb-item [active]="true">Danh Sách Game</c-breadcrumb-item>
 </c-breadcrumb>
 <c-row>
-  <c-col sm="6">
-    <c-card>
-      <c-card-header>
-        <h4 class="card-title mb-0 text-center">ĐÁ GÀ</h4>
-      </c-card-header>
-      <c-card-body>
-        <div class="d-flex align-item-center my-2 mb-4">
-          <div class="status status-processing"></div>
-          <div class="status-text">ĐANG DIỄN RA</div>
-        </div>
-        <div class="d-flex align-item-center btn-actions">
-          <button class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalListMatch()">QUẢN LÍ TRẬN ĐẤU</button>
-          <button class="brown" [cModalToggle]="result.id" (click)="onShowModalResult('ga')">TRẢ KẾT QUẢ</button>
-        </div>
-        <div class="d-flex align-item-center btn-actions">
-          <button class="blue" [cModalToggle]="modal.id" (click)="onShowModalConfirm(1, 'ga')">NGƯNG NHẬN CƯỢC</button>
-          <button class="red" [cModalToggle]="modal.id" (click)="onShowModalConfirm(2, 'ga')">KẾT THÚC PHIÊN</button>
-        </div>
-        <div class="d-flex align-item-center btn-actions">
-          <button class="green" [cModalToggle]="newsession.id" (click)="onShowModalNewSession('ga')">MỞ CƯỢC</button>
-        </div>
-      </c-card-body>
-    </c-card>
-  </c-col>
-  <c-col sm="6">
-    <c-card>
-      <c-card-header>
-        <h4 class="card-title mb-0 text-center">XÓC ĐĨA</h4>
-      </c-card-header>
-      <c-card-body>
-        <div class="d-flex align-item-center my-2 mb-4">
-          <div class="status status-stop"></div>
-          <div class="status-text">NGƯNG NHẬN CƯỢC</div>
-        </div>
-        <div class="d-flex align-item-center btn-actions">
-          <button disabled class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalCurrentSession('xocdia')">PHIÊN HIỆN TẠI</button>
-          <button disabled class="brown" [cModalToggle]="result.id" (click)="onShowModalResult('xocdia')">TRẢ KẾT QUẢ</button>
-        </div>
-        <div class="d-flex align-item-center btn-actions">
-          <button disabled class="blue" [cModalToggle]="modal.id" (click)="onShowModalConfirm(1, 'xocdia')">NGƯNG NHẬN CƯỢC</button>
-          <button disabled class="red" [cModalToggle]="modal.id" (click)="onShowModalConfirm(2, 'xocdia')">KẾT THÚC PHIÊN</button>
-        </div>
-        <div class="d-flex align-item-center btn-actions">
-          <button disabled class="green" [cModalToggle]="newsession.id" (click)="onShowModalNewSession('xocdia')">MỞ CƯỢC</button>
-        </div>
-      </c-card-body>
-    </c-card>
-  </c-col>
+  @for (game of listGames; track game.id) {
+    <c-col sm="6">
+      <c-card>
+        <c-card-header>
+          <h4 class="card-title mb-0 text-center">{{game.name | uppercase }}</h4>
+        </c-card-header>
+        <c-card-body>
+          <div class="d-flex align-item-center my-2 mb-4">
+            <div class={{onRenderStatusClass(game.status)}}></div>
+            <div class="status-text">{{onRenderGameStt(game.status) | uppercase}}</div>
+          </div>
+          <div class="d-flex align-item-center btn-actions">
+            <button *ngIf="game.type == 1" class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalListMatch()">QUẢN LÍ TRẬN ĐẤU</button>
+            <button *ngIf="game.type == 2" disabled class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalCurrentSession(game.type)">PHIÊN HIỆN TẠI</button>
+            <button [disabled]="game.type == 2" class="brown" [cModalToggle]="result.id" (click)="onShowModalResult(game.type)">TRẢ KẾT QUẢ</button>
+          </div>
+          <div class="d-flex align-item-center btn-actions">
+            <button [disabled]="game.type == 2" class="blue" [cModalToggle]="modal.id" (click)="onShowModalConfirm(1, game.type)">NGƯNG NHẬN CƯỢC</button>
+            <button [disabled]="game.type == 2" class="red" [cModalToggle]="modal.id" (click)="onShowModalConfirm(2, game.type)">KẾT THÚC PHIÊN</button>
+          </div>
+          <div class="d-flex align-item-center btn-actions">
+            <button [disabled]="game.type == 2" class="green" [cModalToggle]="newsession.id" (click)="onShowModalNewSession(game.type)">MỞ CƯỢC</button>
+          </div>
+        </c-card-body>
+      </c-card>
+    </c-col>
+  }
 </c-row>
-<c-modal #modal backdrop="static" id="modal">
+<c-modal #modal backdrop="static" id="modal" [visible]="isModalVisibleFinishOrStop">
   <c-modal-body>
     <h5 cModalTitle class="w-100 text-center mb-4">{{title}}</h5>
     <p class="label-txt font-weigth-500">TRẬN ĐẤU:</p>
-    <select class="input-el w-100">
-      <option value="" disabled selected>Chọn trận đấu</option>
-      <option value="1">Trận 1</option>
-      <option value="2">Trận 2</option>
+    <select class="input-el w-100 mb-3" [(ngModel)]="selectedMatchId">
+      <option value="0" disabled>Chọn trận đấu</option>
+      @for (match of listMatch; track match.matchId) {
+        <option value="{{match.matchId}}">{{match.matchName}}</option>
+      }
     </select>
   </c-modal-body>
   <c-modal-footer>
     <button [cModalToggle]="modal.id" cButton color="secondary">
       HỦY
     </button>
-    <button cButton color="primary">XÁC NHẬN</button>
+    <button cButton color="primary" (click)="onConfirmFinishOrStop()">XÁC NHẬN</button>
   </c-modal-footer>
 </c-modal>
 <c-modal #currentSession backdrop="static" id="currentSession">
@@ -101,27 +81,32 @@
     </button>
   </c-modal-footer>
 </c-modal>
-<c-modal #result backdrop="static" id="result">
+<c-modal #result backdrop="static" id="result" [visible]="isModalVisibleResult">
   <c-modal-header>
     <h5 cModalTitle class="w-100 text-center">KẾT QUẢ</h5>
   </c-modal-header>
   <c-modal-body>
     <p class="label-txt font-weigth-500">TRẬN ĐẤU:</p>
-    <select class="input-el w-100 mb-3">
-      <option value="" disabled selected>Chọn trận đấu</option>
-      <option value="1">Trận 1</option>
-      <option value="2">Trận 2</option>
+    <select class="input-el w-100 mb-3" [(ngModel)]="selectedMatchId">
+      <option value="0" disabled>Chọn trận đấu</option>
+      @for (match of listMatch; track match.matchId) {
+        <option value="{{match.matchId}}">{{match.matchName}}</option>
+      }
     </select>
     <p class="font-weigth-500">
       CHỌN GÀ CHIẾN THẮNG:
     </p>
     <div class="d-flex justify-content-evenly">
       <c-form-check>
-        <input cFormCheckInput type="radio" value="1" name="chickenOpt" id="chickengreen" />
+        <input cFormCheckInput type="radio" value="0" name="chickenOpt" id="chickenhoa" [(ngModel)]="resultObj.winner" />
+        <label cFormCheckLabel for="chickenhoa">HÒA</label>
+      </c-form-check>
+      <c-form-check>
+        <input cFormCheckInput type="radio" value="1" name="chickenOpt" id="chickengreen" [(ngModel)]="resultObj.winner" />
         <label cFormCheckLabel for="chickengreen">GÀ XANH</label>
       </c-form-check>
       <c-form-check>
-        <input cFormCheckInput type="radio" value="2" name="chickenOpt" id="chickenred" checked/>
+        <input cFormCheckInput type="radio" value="2" name="chickenOpt" id="chickenred" [(ngModel)]="resultObj.winner" />
         <label cFormCheckLabel for="chickenred">GÀ ĐỎ</label>
       </c-form-check>
     </div>
@@ -130,35 +115,35 @@
     <button [cModalToggle]="result.id" cButton color="secondary">
       ĐÓNG
     </button>
-    <button cButton color="primary">XÁC NHẬN</button>
+    <button cButton color="primary" (click)="onSetResult()">XÁC NHẬN</button>
   </c-modal-footer>
 </c-modal>
-<c-modal #newsession backdrop="static" id="newsession">
+<c-modal #newsession backdrop="static" id="newsession" [visible]="isModalVisibleNewSession">
   <c-modal-header>
     <h5 cModalTitle class="w-100 text-center">PHIÊN CƯỢC MỚI</h5>
   </c-modal-header>
   <c-modal-body>
     <div class="mb-3">
       <div class="d-block mb-1 font-weigth-500">TRẬN ĐẤU:</div>
-      <input name="match" type="text" placeholder="Trận đấu" class="input-el">
+      <input name="match" type="text" placeholder="Trận đấu" class="input-el" [(ngModel)]="newSession.matchName">
     </div>
     <div class="mb-3">
       <div class="d-block mb-1 font-weigth-500">TÊN GÀ XANH:</div>
-      <input name="chicken1" type="text" placeholder="Tên gà xanh" class="input-el">
+      <input name="chicken1" type="text" placeholder="Tên gà xanh" class="input-el" [(ngModel)]="newSession.chickenBlue">
     </div>
     <div class="mb-3">
       <div class="d-block mb-1 font-weigth-500">TÊN GÀ ĐỎ:</div>
-      <input name="chicken2" type="text" placeholder="Tên gà đỏ" class="input-el">
+      <input name="chicken2" type="text" placeholder="Tên gà đỏ" class="input-el" [(ngModel)]="newSession.chickenRed">
     </div>
     <div>
       <div class="d-block mb-1 font-weigth-500">LINK LIVE STREAM:</div>
-      <input name="link" type="text" placeholder="Link live stream" class="input-el">
+      <input name="link" type="text" placeholder="Link live stream" class="input-el" [(ngModel)]="newSession.urlLiveStream">
     </div>
   </c-modal-body>
   <c-modal-footer>
     <button [cModalToggle]="newsession.id" cButton color="secondary">
       HỦY
     </button>
-    <button cButton color="primary">XÁC NHẬN</button>
+    <button cButton color="primary" (click)="onCreateNewSession()">XÁC NHẬN</button>
   </c-modal-footer>
 </c-modal>
