--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
             <div class="status-text">{{onRenderGameStt(game.status) | uppercase}}</div>
           </div>
           <div class="d-flex align-item-center btn-actions">
-            <button *ngIf="game.type == 1" class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalListMatch()">QUẢN LÍ TRẬN ĐẤU</button>
+            <button *ngIf="game.type == 1" class="gray" [cModalToggle]="listMatchModal.id" (click)="onShowModalListMatch()">QUẢN LÍ TRẬN ĐẤU</button>
             <button *ngIf="game.type == 2" disabled class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalCurrentSession(game.type)">PHIÊN HIỆN TẠI</button>
             <button [disabled]="game.type == 2" class="brown" [cModalToggle]="result.id" (click)="onShowModalResult(game.type)">TRẢ KẾT QUẢ</button>
           </div>
@@ -145,5 +145,71 @@
       HỦY
     </button>
     <button cButton color="primary" (click)="onCreateNewSession()">XÁC NHẬN</button>
+  </c-modal-footer>
+</c-modal>
+<c-modal #listMatchModal backdrop="static" id="listMatchModal" [visible]="isModalVisibleListMatch">
+  <c-modal-header>
+    <h5 cModalTitle class="w-100 text-center">DANH SÁCH TRẬN ĐẤU</h5>
+  </c-modal-header>
+  <c-modal-body>
+    <table bordered cTable>
+      <thead>
+        <tr>
+          <th scope="col" class="text-center">ID</th>
+          <th scope="col" class="text-center">TÊN TRẬN ĐẤU</th>
+          <th scope="col" class="text-center">TRẠNG THÁI</th>
+          <th scope="col" class="text-center">HÀNH ĐỘNG</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for (match of listMatch; track match.matchId) {
+          <tr>
+            <td class="text-center">{{match.matchId}}</td>
+            <td class="text-center">{{match.matchName}}</td>
+            <td class="text-center">{{onRenderGameStt(match.status)}}</td>
+            <td class="text-center">
+              <span class="detail-txt" (click)="onSelectMatch(match)">
+                <svg [cIcon]="icons.cilInfo" size="xl" title="Chi Tiết"></svg>
+              </span>
+            </td>
+          </tr>
+        }
+      </tbody>
+    </table>
+    <div class="match-detail" *ngIf="selecteMatch">
+      <h6 class="text-center">
+        THÔNG TIN CHI TIẾT TRẬN ĐẤU
+      </h6>
+      <p>
+        TÊN TRẬN ĐẤU: {{selecteMatch.matchName}}
+      </p>
+      <p>
+        THỜI GIAN BẮT ĐẦU: {{selecteMatch.startTime * 1000 | date:'dd/MM/yyyy HH:mm'}}
+      </p>
+      <p>
+        THỜI GIAN KẾT THÚC: {{selecteMatch.endTime && selecteMatch.endTime * 1000 | date:'dd/MM/yyyy HH:mm'}}
+      </p>
+      <P>KẾT QUẢ: </P>
+      <p>THÔNG TIN GÀ:</p>
+      <table bordered cTable>
+        <thead>
+          <tr>
+            <th scope="col" class="text-center">GÀ XANH</th>
+            <th scope="col" class="text-center">GÀ ĐỎ</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td class="text-center">{{selecteMatch.chickenBlue}}</td>
+            <td class="text-center">{{selecteMatch.chickenRed}}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </c-modal-body>
+  <c-modal-footer>
+    <button [cModalToggle]="listMatchModal.id" cButton color="secondary">
+      ĐÓNG
+    </button>
   </c-modal-footer>
 </c-modal>
