--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -11,20 +11,22 @@
         </c-card-header>
         <c-card-body>
           <div class="d-flex align-item-center my-2 mb-4">
-            <div class={{onRenderStatusClass(game.status)}}></div>
-            <div class="status-text">{{onRenderGameStt(game.status) | uppercase}}</div>
+            <div *ngIf="game.type == 1" class={{onRenderStatusClass(game.status)}}></div>
+            <div class="status-text" [ngClass]="{'opacity-0': game.type == 2}">{{onRenderGameStt(game.status) | uppercase}}</div>
           </div>
           <div class="d-flex align-item-center btn-actions">
             <button *ngIf="game.type == 1" class="gray" [cModalToggle]="listMatchModal.id" (click)="onShowModalListMatch()">QUẢN LÍ TRẬN ĐẤU</button>
-            <button *ngIf="game.type == 2" disabled class="gray" [cModalToggle]="currentSession.id" (click)="onShowModalCurrentSession(game.type)">PHIÊN HIỆN TẠI</button>
+            <button *ngIf="game.type == 2" class="gray" (click)="onShowModalCurrentSessionXD()">TRẬN ĐẤU HIỆN TẠI</button>
             <button [disabled]="game.type == 2" class="brown" [cModalToggle]="result.id" (click)="onShowModalResult(game.type)">TRẢ KẾT QUẢ</button>
           </div>
           <div class="d-flex align-item-center btn-actions">
             <button [disabled]="game.type == 2" class="blue" [cModalToggle]="modal.id" (click)="onShowModalConfirm(1, game.type)">NGƯNG NHẬN CƯỢC</button>
-            <button [disabled]="game.type == 2" class="red" [cModalToggle]="modal.id" (click)="onShowModalConfirm(2, game.type)">KẾT THÚC PHIÊN</button>
+            <button *ngIf="game.type == 1" class="red" [cModalToggle]="modal.id" (click)="onShowModalConfirm(2, game.type)">KẾT THÚC PHIÊN</button>
+            <button *ngIf="game.type == 2" class="red" (click)="onFinishXD()">KẾT THÚC TRẬN ĐẤU</button>
           </div>
           <div class="d-flex align-item-center btn-actions">
-            <button [disabled]="game.type == 2" class="green" [cModalToggle]="newsession.id" (click)="onShowModalNewSession(game.type)">MỞ CƯỢC</button>
+            <button *ngIf="game.type == 1" class="green" [cModalToggle]="newsession.id" (click)="onShowModalNewSession(game.type)">MỞ CƯỢC</button>
+            <button *ngIf="game.type == 2" class="green" (click)="onCreateXD()">TẠO TRẬN MỚI</button>
           </div>
         </c-card-body>
       </c-card>
@@ -51,36 +53,22 @@
     <button cButton color="primary" (click)="onConfirmFinishOrStop()">XÁC NHẬN</button>
   </c-modal-footer>
 </c-modal>
-<c-modal #currentSession backdrop="static" id="currentSession">
+<c-modal backdrop="static" id="currentSession" [visible]="isModalVisibleCurrentSessionXD">
   <c-modal-header>
     <h5 cModalTitle class="w-100 text-center">THÔNG TIN CHI TIẾT</h5>
   </c-modal-header>
   <c-modal-body>
-    <table bordered cTable>
-      <thead>
-        <tr>
-          <th scope="col" class="text-center">GÀ XANH</th>
-          <th scope="col" class="text-center">GÀ ĐỎ</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="text-center">GÀ XANH NGHỆ AN</td>
-          <td class="text-center">GÀ ĐỎ NAM ĐỊNH</td>
-        </tr>
-      </tbody>
-    </table>
-    <p>
-      THỜI GIAN BẮT ĐẦU: 12:00 20/10/2024
-    </p>
-    <p>
-      THỜI GIAN KẾT THÚC: 12:00 20/10/2024
-    </p>
+    <p>Trạng Thái: {{currentActiveMatchXD.statusMatch}}</p>
+    <div>
+      Link Live Stream:
+      <input name="link" type="text" placeholder="Link live stream" class="input-el" [(ngModel)]="currentActiveMatchXD.urlLiveStream">
+    </div>
   </c-modal-body>
   <c-modal-footer>
-    <button [cModalToggle]="currentSession.id" cButton color="secondary">
+    <button cButton color="secondary" (click)="isModalVisibleCurrentSessionXD = false;">
       ĐÓNG
     </button>
+    <button cButton color="primary" (click)="onUpdateXD()">CẬP NHẬT</button>
   </c-modal-footer>
 </c-modal>
 <c-modal #result backdrop="static" id="result" [visible]="isModalVisibleResult">
@@ -270,5 +258,33 @@
       HỦY
     </button>
     <button cButton color="primary" (click)="onConfirmReopen()">XÁC NHẬN</button>
+  </c-modal-footer>
+</c-modal>
+<c-modal #newsessionxd backdrop="static" id="newsessionXD" [visible]="isCreateXD">
+  <c-modal-header>
+    <h5 cModalTitle class="w-100 text-center">TẠO TRẬN MỚI</h5>
+  </c-modal-header>
+  <c-modal-body>
+    <div>
+      <div class="d-block mb-1 font-weigth-500">LINK LIVE STREAM:</div>
+      <input name="link" type="text" placeholder="Link live stream" class="input-el" [(ngModel)]="newSessionXD.urlLiveStream">
+    </div>
+  </c-modal-body>
+  <c-modal-footer>
+    <button cButton color="secondary" (click)="isCreateXD = false;">
+      HỦY
+    </button>
+    <button cButton color="primary" (click)="onCreateNewSessionXD()">XÁC NHẬN</button>
+  </c-modal-footer>
+</c-modal>
+<c-modal backdrop="static" id="modalXD" [visible]="isFinishXD">
+  <c-modal-body>
+    <h5 cModalTitle class="w-100 text-center mb-4">TRẬN ĐẤU HIỆN TẠI SẼ BỊ ĐÓNG</h5>
+  </c-modal-body>
+  <c-modal-footer>
+    <button cButton color="secondary" (click)="isFinishXD = false;">
+      HỦY
+    </button>
+    <button cButton color="primary" (click)="onConfirmFinishXD()">XÁC NHẬN</button>
   </c-modal-footer>
 </c-modal>
